fix disabled button not showing on dark mode

--- a/themes/fds-theme/color/_light.scss
+++ b/themes/fds-theme/color/_light.scss
@@ -40,7 +40,7 @@ $properties: (
   text-high-on-background: $on-background,
   text-medium-on-background: color.change($_black, $alpha: 0.54),
   text-hint-on-background: color.change($_black, $alpha: 0.29),
-  text-disabled-on-background: color.change($_black, $alpha: 0.29),
+  text-disabled-on-background: color.change($_black, $alpha: 0.12),
   text-icon-on-background: color.change($_black, $alpha: 0.29),
   text-high-on-light: color.change($_black, $alpha: 0.75),
   text-medium-on-light: color.change($_black, $alpha: 0.54),
